--- a/package.json
+++ b/package.json
@@ -4,25 +4,43 @@
   "version": "0.0.0",
   "main": "dist/electron-main/index.js",
   "scripts": {
+    "lint": "eslint 'src/**/*.{js,ts,vue}'",
+    "lint:fix": "eslint 'src/**/*.{js,ts,vue}' --fix",
+    "format": "prettier --write 'src/**/*.{js,ts,vue,json,md}'",
     "dev": "vite",
     "build": "rimraf dist && vite build && electron-builder",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.15"
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.8.2",
+    "pinia": "^2.2.2",
+    "sass": "^1.78.0",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vueuse/electron": "^8.5.0",
-    "electron": "^19.0.0",
-    "electron-builder": "^23.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "@vitejs/plugin-vue": "^4.2.0",
+    "@vueuse/electron": "^11.0.3",
+    "electron": "^32.0.1",
+    "electron-builder": "^25.0.5",
     "electron-devtools-installer": "^3.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vite-plugin-electron": "^0.4.5",
-    "vue-tsc": "^0.34.7"
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.6.2",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^4.4.0",
+    "vite-plugin-electron": "^0.28.7",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-vue": "^0.0.1",
+    "vue-tsc": "^2.1.6"
   },
   "build": {
     "appId": "com.smallpig.desktop",
