build: 构建项目配置，dev和build配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,19 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
-    "skipLibCheck": true
+    "allowSyntheticDefaultImports": true, // 添加这行
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "outDir": "./dist/electron-main" // 添加这一行
   },
   "include": [
     "src/**/*.ts",
@@ -21,6 +32,9 @@
     "electron-main/**/*.ts",
     "electron-preload/**/*.ts"
   ],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
-
