--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
       "esnext",
       "dom"
     ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/typings"
+    ],
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
