--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_DEV_SERVER_HOST=localhost
 VITE_DEV_SERVER_PORT=3000
 VITE_DEV_SERVER_HOMEURL=/workspace/all-books
+VITE_API_BASE_URL=http://localhost:8080
