--- a/package.json
+++ b/package.json
@@ -13,18 +13,37 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.2",
+    "express": "^4.21.0",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.5.5",
     "pinia": "^2.2.2",
     "sass": "^1.78.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "trix": "^2.1.5",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.4",
+    "@types/sqlite3": "^3.1.11",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "@vitejs/plugin-vue": "^4.2.0",
     "@vueuse/electron": "^11.0.3",
-    "electron": "^32.0.1",
+    "electron": "32.0.1",
     "electron-builder": "^25.0.5",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^9.10.0",
@@ -33,6 +52,7 @@
     "eslint-plugin-vue": "^9.28.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.4",
