feat: 新的样式修改

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint 'src/**/*.{js,ts,vue}' --fix",
     "format": "prettier --write 'src/**/*.{js,ts,vue,json,md}'",
     "dev": "vite",
+    "dev:full": "concurrently \"npm run dev\" \"node server/server.ts\"",
     "build": "rimraf dist && vite build && electron-builder",
     "preview": "vite preview",
     "start": "electron dist/electron-main/index.js",
@@ -24,6 +25,7 @@
     "echarts": "^5.5.1",
     "element-plus": "^2.8.5",
     "express": "^4.21.0",
+    "marked": "^15.0.8",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.5.5",
     "pinia": "^2.2.2",
@@ -46,6 +48,7 @@
     "@typescript-eslint/parser": "^8.4.0",
     "@vitejs/plugin-vue": "^4.2.0",
     "@vueuse/electron": "^11.0.3",
+    "concurrently": "^9.1.2",
     "electron": "32.0.1",
     "electron-builder": "^25.0.5",
     "electron-devtools-installer": "^3.2.0",
