feat(auth,api,ui): 统一前端请求方式与接口前缀；完善登录/注册与路由守卫；对接创作空间章节/分卷接口；迁移登录背景资源；新增错误页与用户信息组件；同步服务端路由与入口(cjs)

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "main": "dist/electron-main/index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint 'src/**/*.{js,ts,vue}'",
     "lint:fix": "eslint 'src/**/*.{js,ts,vue}' --fix",
     "format": "prettier --write 'src/**/*.{js,ts,vue,json,md}'",
     "dev": "vite",
-    "dev:full": "concurrently \"npm run dev\" \"node server/server.ts\"",
+    "dev:full": "concurrently \"npm run dev\" \"node server/index.cjs\"",
     "build": "rimraf dist && vite build && electron-builder",
     "preview": "vite preview",
     "start": "electron dist/electron-main/index.js",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -25,6 +27,7 @@
     "echarts": "^5.5.1",
     "element-plus": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "marked": "^15.0.8",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.5.5",
