--- a/package.json
+++ b/package.json
@@ -14,30 +14,33 @@
     "preview": "vite preview",
     "start": "electron dist/electron-main/index.js",
     "build:renderer": "vite build",
-    "build:main": "tsc --project electron-main/tsconfig.json"
+    "build:main": "tsc --project electron-main/tsconfig.json",
+    "init-db": "node scripts/init-db.js"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@types/jsonwebtoken": "^9.0.10",
-    "aws-sdk": "^2.1691.0",
+    "@types/uuid": "^11.0.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "marked": "^15.0.8",
-    "mock-aws-s3": "^4.0.2",
     "multer": "^2.0.2",
-    "nock": "^13.5.5",
+    "pangu": "^7.2.0",
     "pinia": "^2.2.2",
     "sass": "^1.78.0",
+    "segment": "^0.1.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "trix": "^2.1.5",
+    "uuid": "^13.0.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
   },
@@ -61,6 +64,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.5.5",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
